# wikipedia_analyser

./: README.md  manage.py  pyproject.toml  tests.ipynb
wikipedia_analyzer/: asgi.py  settings.py  urls.py  wsgi.py
